--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ library(learnr, reticulate)
 
 ##  1 
 
-### What language is this?
+### Which programming language is this?
 
 
 ```{r, eval=FALSE}
@@ -44,7 +44,7 @@ random_answer_order = TRUE
 
 ## 2 
 
-### What language is this?
+### Which programming language is this?
 
 
 ```{r, eval=FALSE}
@@ -68,7 +68,7 @@ random_answer_order = TRUE
 
 ## 3
 
-### What language is this?
+### Which programming language is this?
 
 ```{r, eval=FALSE}
 \documentclass{plain}
@@ -102,7 +102,7 @@ random_answer_order = TRUE
 
 ## 5
 
-### A database language used for defining the whole databasestructureand schema is called :
+### A database language used for defining the whole database structure and schema is called:
 
 ```{r q-5, echo=FALSE}
 question("",
@@ -126,3 +126,111 @@ question("",
 random_answer_order = TRUE
 )
 ```
+
+## 7
+
+### Predict the output of the following code:
+
+```{r,  eval=FALSE}
+class Test
+{
+    boolean[] array = new boolean[3];
+    int count = 0;
+  
+    void set(boolean[] arr, int x)
+    {
+        arr[x] = true;
+        count++;
+    }
+  
+    void func()
+    {
+        if(array[0] && array[++count - 2] | array [count - 1])
+            count++;
+  
+        System.out.println("count = " + count);
+    }
+  
+  
+    public static void main(String[] args)
+    {
+        Test object = new Test();
+        object.set(object.array, 0);
+        object.set(object.array, 1);
+        object.func();
+    }
+}
+```
+
+```{r q-7, echo=FALSE}
+question("",
+  answer("2"),
+  answer("3"),
+  answer("4", correct = TRUE),
+
+random_answer_order = TRUE
+)
+```
+
+## 8
+
+### Technique used to find the best choice of number of clusters 
+```{r q-8, echo=FALSE}
+question("",
+  answer("screeplot()", correct = TRUE),
+  answer("knn()"),
+  answer("skewness()"),
+  answer("dendogram()"),
+
+random_answer_order = TRUE
+)
+```
+
+## 9
+
+### The least squares estimator in MLR is derived by:
+```{r, q-9, echo=FALSE}
+
+question("",
+  answer("Minimizing the sum of squared errors", correct = TRUE),
+  answer("Making the sum of squared errors equal to one"),
+  answer("Minimizing the absolute difference of the residuals"),
+  answer("Forcing the smallest distance between the actual and fitted values"),
+
+random_answer_order = TRUE
+)
+
+```
+
+## 10
+
+### Which of the following is a server-side Java Script object? 
+
+```{r, q-10, echo=FALSE}
+question("",
+  answer("Function"),
+  answer("FileUpload"),
+  answer("File" , correct = TRUE),
+  answer("Date"),
+
+random_answer_order = TRUE
+)
+ 
+```
+
+## 11
+
+### What is negative infinity in Java script? 
+
+
+```{r, q-11, echo=FALSE}
+ question("",
+  answer("Any of below."),
+  answer(" Number in JavaScript, derived by dividing number by a negative number. "),
+  answer("Number in JavaScript, derived by dividing number by zero."),
+  answer("Number in JavaScript, derived by dividing negative number by zero.", correct = TRUE),
+random_answer_order = TRUE
+)
+
+```
+
